--- a/form.html
+++ b/form.html
@@ -96,10 +96,8 @@
     </p>
     <p id="lastModified"></p>
   </footer>
-  <script src="scripts/main.js" type="module"></script>
+  <script src="scripts/form.js" type="module"></script>
   <script src="scripts/checkPass.js"></script>
-  <script src="scripts/displaySelectedRating.js"></script>
-  <script src="scripts/validateEmail.js"></script>
 
 </body>
 </html>
