--- a/form.html
+++ b/form.html
@@ -64,12 +64,10 @@
         <div id="form-message-pass"></div>
         <label>Email <input type="email" id="email" name="email" pattern="[a-zA-Z0-9._%+-]+@byui\.edu$" title="Please enter a valid email address in the format user@byui.edu"></label>
         <div id="form-message-email"></div>
-        <label>
+        <label id="rating-element">
           Page Rating 
-          <div class="range-value">
-            <input id="rating-input" type="range" min="1" max="10" value="1" step="1" list="rangevalues">
-            <span id="display-selected-rating">0</span>
-          </div>
+          <input id="rating-input" type="range" min="1" max="10" value="1" step="1" list="rangevalues">
+          <span id="display-selected-rating">0</span>
           <datalist id="rangevalues">
             <option value="1">1</option>
             <option value="2">2</option>
