fea: Add links to Join page

--- a/chamber/index.html
+++ b/chamber/index.html
@@ -64,7 +64,7 @@
         <li><a class="nav-link" href="#">Home</a></li>
         <li><a class="nav-link" href="discover.html">Discover</a></li>
         <li><a class="nav-link" href="#">Directory</a></li>
-        <li><a class="nav-link" href="#">Join Now</a></li>
+        <li><a class="nav-link" href="join.html">Join Now</a></li>
       </ul>
     </nav>
     <section class="hero-container">
@@ -76,7 +76,7 @@
         <img src="images/gorosito-hero-576-240-30.webp" alt="Caleta Olivia's Gorosito statue" width="576" height="240">
       </picture>
       <h1 class="hero-header">Caleta Olivia<br>Chamber of Commerce</h1>
-      <a class="button hero-call-to-action" href="#">Join</a>
+      <a class="button hero-call-to-action" href="join.html">Join</a>
     </section>
     <aside class="weather-card">
       <div class="weather-text">
