--- a/chamber/thankyou.html
+++ b/chamber/thankyou.html
@@ -64,7 +64,7 @@
         <li><a class="nav-link" href="#">Home</a></li>
         <li><a class="nav-link" href="discover.html">Discover</a></li>
         <li><a class="nav-link" href="#">Directory</a></li>
-        <li><a class="nav-link" href="#">Join Now</a></li>
+        <li><a class="nav-link" href="join.html">Join Now</a></li>
       </ul>
     </nav>
     <main>
