--- a/chamber/discover.html
+++ b/chamber/discover.html
@@ -64,7 +64,7 @@
         <li><a class="nav-link" href="index.html">Home</a></li>
         <li><a class="nav-link" href="#">Discover</a></li>
         <li><a class="nav-link" href="#">Directory</a></li>
-        <li><a class="nav-link" href="#">Join Now</a></li>
+        <li><a class="nav-link" href="join.html">Join Now</a></li>
       </ul>
     </nav>
     <section class="hero-container discover">
