fix: page head data

--- a/chamber/join.html
+++ b/chamber/join.html
@@ -1,22 +1,22 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <meta charset="UTF-8" />
+    <meta charset="UTF-8">
     <!-- Set the viewport to make the website look good on all devices:-->
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
     <!-- Set page title-->
-    <title>Caleta Olivia Chamber of Commerce</title>
+    <title>Membership Form - Chamber of Commerce</title>
 
     <!-- Meta tags: Description an author. Used in Google results page -->
     <meta
       name="description"
-      content="The Chamber of Commerce represents our city's main businesses, attractions and places of interest"
+      content="Membership form to join the Chamber of Commerce"
     >
     <meta name="author" content="Fernando Chazarreta">
 
     <!-- Meta tags: Open graph properties. Used when the page is shared into Facebook -->
-    <meta property="og:title" content="Caleta Olivia Chamber of Commerce">
+    <meta property="og:title" content="Membership Form - Caleta Olivia Chamber of Commerce">
     <meta property="og:type" content="website">
     <meta
       property="og:image"
@@ -42,15 +42,15 @@
     <link rel="stylesheet" href="styles/desktop.css">
 
     <!-- Favicon -->
-    <link rel="icon" href="favicon.ico" />
-    <link rel="apple-touch-icon" sizes="180x180" href="apple-touch-icon.png" />
-    <link rel="icon" type="image/png" sizes="32x32" href="favicon-32x32.png" />
-    <link rel="icon" type="image/png" sizes="16x16" href="favicon-16x16.png" />
-    <link rel="manifest" href="site.webmanifest" />
+    <link rel="icon" href="favicon.ico">
+    <link rel="apple-touch-icon" sizes="180x180" href="apple-touch-icon.png">
+    <link rel="icon" type="image/png" sizes="32x32" href="favicon-32x32.png">
+    <link rel="icon" type="image/png" sizes="16x16" href="favicon-16x16.png">
+    <link rel="manifest" href="site.webmanifest">
   </head>
   <body>
     <header>
-      <img class="logo" src="images/logo.png" alt="Logo" />
+      <img class="logo" src="images/logo.png" alt="Logo">
       <div class="header-title-container">
         <h3>Caleta Olivia</h3>
         <h3>Chamber of Commerce</h3>
