--- a/index.html
+++ b/index.html
@@ -1,9 +1,9 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <meta charset="UTF-8">
+    <meta charset="UTF-8" />
     <!-- Setting the viewport to make the website look good on all devices:-->
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <!-- Set page title-->
     <title>Fernando Chazarreta - WDD 230 - Web Frontend Development</title>
 
@@ -11,38 +11,35 @@
     <meta
       name="description"
       content="This is the course assignment portal for BYU's 'WDD 230 - Web Frontend Development' course. By Fernando Chazarreta"
-    >
-    <meta name="author" content="Fernando Chazarreta">
+    />
+    <meta name="author" content="Fernando Chazarreta" />
 
     <!-- Meta tags: Open graph properties. Used when the page is shared into Facebook -->
-    <meta
-      property="og:title"
-      content="Fernando Chazarreta - WDD 230 - Web Frontend Development"
-    >
-    <meta property="og:type" content="website">
+    <meta property="og:title" content="Fernando Chazarreta - WDD 230 - Web Frontend Development" />
+    <meta property="og:type" content="website" />
     <meta
       property="og:image"
       content="https://media-cdn.tripadvisor.com/media/photo-s/14/b8/8c/ea/photo0jpg.jpg"
-    >
-    <meta property="og:url" content="https://fernandochaza.github.io/wdd230/">
+    />
+    <meta property="og:url" content="https://fernandochaza.github.io/wdd230/" />
 
     <!-- Google fonts -->
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
       href="https://fonts.googleapis.com/css2?family=Fira+Mono:wght@400;500&family=Inter:wght@100;300;400;700;800;900&display=swap"
       rel="stylesheet"
-    >
+    />
     <!-- External CSS-->
     <link
       rel="stylesheet"
       href="https://cdnjs.cloudflare.com/ajax/libs/normalize/8.0.1/normalize.min.css"
-    >
-    <link rel="stylesheet" href="styles/base.css">
-    <link rel="stylesheet" href="styles/larger.css">
+    />
+    <link rel="stylesheet" href="styles/base.css" />
+    <link rel="stylesheet" href="styles/larger.css" />
 
     <!-- Favicon -->
-    <link rel="icon" href="favicon.ico">
+    <link rel="icon" href="favicon.ico" />
   </head>
   <body>
     <header>
@@ -50,12 +47,10 @@
         id="profile-picture"
         src="images/profile-pic.webp"
         alt="Fernando Chazarreta's profile picture"
-      >
+      />
       <h1>Fernando Chazarreta</h1>
       <div class="dark-mode-container">
-        <button aria-label="Toggle Dark Mode" class="dark-light-button">
-          ☀
-        </button>
+        <button aria-label="Toggle Dark Mode" class="dark-light-button">☀</button>
       </div>
     </header>
     <div class="menu-button-container">
@@ -73,21 +68,15 @@
       <section class="hero-container">
         <h2 class="hero-label">Buenos Aires Temple</h2>
         <picture>
-          <source
-            media="(max-width: 768px)"
-            srcset="images/buenos-aires-landscape-768w.webp"
-          >
-          <source
-            media="(min-width: 769px)"
-            srcset="images/buenos-aires-landscape-900w.webp"
-          >
+          <source media="(max-width: 768px)" srcset="images/buenos-aires-landscape-768w.webp" />
+          <source media="(min-width: 769px)" srcset="images/buenos-aires-landscape-900w.webp" />
           <img
             class="hero-image"
             src="images/buenos-aires-landscape-768w.webp"
             alt="Entrance to the Buenos Aires Temple"
             width="768"
             height="480"
-          >
+          />
         </picture>
       </section>
       <div class="title-container">
@@ -98,15 +87,11 @@
         <ul>
           <li>
             Week 02 -
-            <a href="week02/design.html" target="_blank"
-              >Web Design Principles</a
-            >
+            <a href="week02/design.html" target="_blank">Web Design Principles</a>
           </li>
           <li>
             Week 02 -
-            <a
-              href="https://codepen.io/fernandochaza/pen/abQNpMY"
-              target="_blank"
+            <a href="https://codepen.io/fernandochaza/pen/abQNpMY" target="_blank"
               >Responsive Navigation</a
             >
           </li>
@@ -126,7 +111,10 @@
           </li>
           <li>
             Week 04 -
-            <a href="https://drive.google.com/file/d/1ToZmsOtrpvndKpxdvYWjitUX4cdEaOzD/view?usp=sharing">CSS Combinators</a>
+            <a
+              href="https://drive.google.com/file/d/1ToZmsOtrpvndKpxdvYWjitUX4cdEaOzD/view?usp=sharing"
+              >CSS Combinators</a
+            >
           </li>
           <li>
             Week 04 -
@@ -135,6 +123,24 @@
           <li>
             Week 04 -
             <a href="week04/form-start/index.html">HTML Forms</a>
+          </li>
+          <li>
+            Week 05 -<a
+              href="https://codepen.io/fernandochaza/pen/PoxJRBrweek04/form-start/index.html"
+              > Pseudo-elements</a
+            >
+          </li>
+          <li>
+            Week 05 -<a
+              href="week05/new-ward-members.json"
+              > Working with JSON data</a
+            >
+          </li>
+          <li>
+            Week 05 -<a
+              href="week05/prophets.html"
+              > The Fetch API</a
+            >
           </li>
         </ul>
       </section>
