feat: Finish week 05 prepare

--- a/index.html
+++ b/index.html
@@ -142,6 +142,12 @@
               > The Fetch API</a
             >
           </li>
+          <li>
+            Week 05 -<a
+              href="week05/weather.html"
+              > Consuming a third-party API</a
+            >
+          </li>
         </ul>
       </section>
       <section class="card">
