feat: week05 weather info

--- a/index.html
+++ b/index.html
@@ -152,8 +152,8 @@
       </section>
       <section class="card">
         <h3 class="card-header">Information</h3>
-        <div class="location">[Location Placeholder]</div>
-        <div class="weather">[Weather Placeholder]</div>
+        <div class="location">Caleta Olivia</div>
+        <div class="weather"><img id="weather-icon" src="#" alt=""><span id="weather-info"></span></div>
         <div class="visits"></div>
       </section>
     </main>
