feat: add weather forecast

--- a/chamber/discover.html
+++ b/chamber/discover.html
@@ -63,7 +63,7 @@
       <ul class="navigation-container">
         <li><a class="nav-link" href="index.html">Home</a></li>
         <li><a class="nav-link" href="#">Discover</a></li>
-        <li><a class="nav-link" href="#">Directory</a></li>
+        <li><a class="nav-link" href="directory.html">Directory</a></li>
         <li><a class="nav-link" href="join.html">Join Now</a></li>
       </ul>
     </nav>
@@ -78,11 +78,8 @@
       <h1 class="hero-header discover">Discover<br>Caleta Olivia</h1>
     </section>
     <aside class="weather-card">
-      <div class="weather-text">
-        <p class="weather-measure">23°C</p>
-        <p class="weather-city">Caleta Olivia</p>
-      </div>
-      <p class="weather-image">☀️</p>
+      <p id="weather-info" class="weather-measure"></p>
+      <img class="weather-image" id="weather-icon">
     </aside>
     <section class="directory-button-container">
       <h3>Our Directory</h3>
