--- a/chamber/index.html
+++ b/chamber/index.html
@@ -63,7 +63,7 @@
       <ul class="navigation-container">
         <li><a class="nav-link" href="#">Home</a></li>
         <li><a class="nav-link" href="discover.html">Discover</a></li>
-        <li><a class="nav-link" href="#">Directory</a></li>
+        <li><a class="nav-link" href="directory.html">Directory</a></li>
         <li><a class="nav-link" href="join.html">Join Now</a></li>
       </ul>
     </nav>
@@ -79,11 +79,11 @@
       <a class="button hero-call-to-action" href="join.html">Join</a>
     </section>
     <aside class="weather-card">
-      <div class="weather-text">
-        <p class="weather-measure">23°C</p>
-        <p class="weather-city">Caleta Olivia</p>
-      </div>
-      <p class="weather-image">☀️</p>
+      <p id="weather-info" class="weather-measure"></p>
+      <img class="weather-image" id="weather-icon">
+    </aside>
+    <aside class="daily-forecast weather-card" id="daily-forecast">
+
     </aside>
     <section class="directory-button-container">
       <h3>Our Directory</h3>
