--- a/chamber/join.html
+++ b/chamber/join.html
@@ -61,10 +61,10 @@
     </header>
     <nav id="nav-section">
       <ul class="navigation-container">
-        <li><a class="nav-link" href="#">Home</a></li>
+        <li><a class="nav-link" href="index.html">Home</a></li>
         <li><a class="nav-link" href="discover.html">Discover</a></li>
-        <li><a class="nav-link" href="#">Directory</a></li>
-        <li><a class="nav-link" href="#">Join Now</a></li>
+        <li><a class="nav-link" href="directory.html">Directory</a></li>
+        <li><a class="nav-link" href="">Join Now</a></li>
       </ul>
     </nav>
     <main>
